# db-to-file-extractor

./: Cargo.toml  build.rs  schema.json
.github/workflows/: rust.yml
src/: config.rs  data_types.rs  main.rs  sql.rs
src/writer/: mod.rs  mssql_writer.rs  mysql_writer.rs
