[package]
name = "db-extractor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "*" }
sqlx = { version = "0.5", features = [ "any", "runtime-tokio-rustls", "mysql", "mssql" ] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
